--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,9 @@
 }
 :root{
     --white :  rgb(255, 255, 255);
+    --shade-1: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    --shade-2: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    --size: 660px;
 }
 body{
     background-color: rgb(218, 218, 218);
@@ -10,21 +13,67 @@ body{
 }
 .check{
     background: var(--white);
-    padding: 1px;
     background-clip: content-box;
-    /* border: 1px solid rgb(138, 90, 0); */
-    border-radius:.3rem;
-    /* box-shadow: 0px 0px 30px rgb(223, 223, 223); */
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    box-shadow:var(--shade-2)
+}
+.main{
+    width: var(--size);
+    min-height: var(--size);
 }
 .parent{
-background: var(--white);
-box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-    max-width: 660px;
-    height: 660px;
+    background: var(--white);
+    box-shadow: var(--shade-1);
+    width: var(--size);
+    min-height: var(--size);
     display: grid;
-    /* grid-template-columns: repeat(25 , 1fr);
-    grid-template-rows:repeat(25 ,1fr); */
     border: 1rem solid rgb(237, 237, 237);
+    padding: 0 ;
+}
+/* button actions */
+#clearBtn,.rainbow{
+    background: transparent;;
+}
+.circle{
+    background-color: #73d37a;
+    border-radius: 25%;
+    overflow: hidden;
+    width: 100px;
+    height: 100px; 
+}
+[type="color"]{
+    width: 100px;
+    height: 100px; 
+    background-color: transparent;
+    border: none;
+}
+/* a non standard method for the appearance of input:color */
+[type="color"]::-webkit-color-swatch{
+    border-radius: 25%;
+    border: none;
+}
 
+button{
+    border: transparent;
+    outline: none;
+}
+
+@media only screen and (max-width: 330px){
+    :root{
+        --size: 300px;
+    }
+}
+@media only screen and (min-width: 330px){
+    :root{
+        --size: 375px;
+    }
+}
+@media only screen and (min-width: 576px){
+    :root{
+        --size: 556px;
+    }
+}
+@media only screen and (min-width: 768px){
+    :root{
+        --size: 660px;
+    }
 }
